<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.cybersecurityhub.maven</groupId>
    <artifactId>training</artifactId>
    <name>CyberRangeCZ Platform Training</name>
    <description>Backend for linear trainings</description>
    <version>${app-version}</version>
    <packaging>pom</packaging>

    <url>https://github.com/cyberrangecz/backend-training</url>
    <scm>
        <url>https://github.com/cyberrangecz/backend-training</url>
        <connection>scm:git:https://github.com/cyberrangecz/backend-training.git</connection>
        <developerConnection>scm:git:git@github.com:cyberrangecz/backend-training.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <name>Mário Murín</name>
            <email>murin@cshub.cz</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://github.com/cyberrangecz/backend-training/blob/master/LICENSE</url>
        </license>
    </licenses>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
    </parent>

    <properties>
        <java.version>17</java.version>
        <proprietary-repo-id>github</proprietary-repo-id>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <crczp-security-commons.version>1.0.1</crczp-security-commons.version>
        <swagger.version>2.9.2</swagger.version>
        <swagger.directory>${basedir}/../doc-files</swagger.directory>
        <swagger.skip>true</swagger.skip>
        <swagger.host>localhost:8083</swagger.host>
        <github.kongchen.version>3.1.8</github.kongchen.version>
        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
        <modelmapper.version>2.3.4</modelmapper.version>
        <squiggly.filter.jackson.version>1.3.18</squiggly.filter.jackson.version>
        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
        <concurrent-junit.version>1.0.2</concurrent-junit.version>
        <!-- added to avoid log4j2 vulnerability CVE-2021-44228 -->
        <log4j2.version>2.15.0</log4j2.version>
        <commons-math3.version>3.1.1</commons-math3.version>
        <spring-data-commons.version>2.6.2</spring-data-commons.version>
        <swagger-annotations.version>1.6.4</swagger-annotations.version>
        <lombok.version>1.18.36</lombok.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <guava.version>31.0.1-jre</guava.version>
        <!-- code quality -->
        <error-prone.version>2.41.0</error-prone.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
    </properties>

    <!-- specifies versions not defined by the Spring boot platform -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cz.cybersecurityhub.maven</groupId>
                <artifactId>crczp-security-commons</artifactId>
                <version>${crczp-security-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <!--mapping entities to DTO -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.modelmapper</groupId>
                <artifactId>modelmapper</artifactId>
                <version>${modelmapper.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vmlens</groupId>
                <artifactId>concurrent-junit</artifactId>
                <version>${concurrent-junit.version}</version>
            </dependency>
            <!-- filtering REST respons -->
            <dependency>
                <groupId>com.github.bohnman</groupId>
                <artifactId>squiggly-filter-jackson</artifactId>
                <version>${squiggly.filter.jackson.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- cluster analysis visualization-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons</artifactId>
                <version>${spring-data-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <!-- Required by opensearch-java 2.x (marked optional, not transitive by default) -->
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>2.1.3</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>

                <!-- Spotless: auto-formatting check -->
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.46.1</version>
                    <configuration>
                    <skip>${skipChecks}</skip>
                    <java>
                        <googleJavaFormat />
                    </java>
                    </configuration>
                    <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>validate</phase>
                        <goals>
                        <goal>apply</goal>
                        </goals>
                    </execution>
                    </executions>
                </plugin>

                <!-- Surefire: unit tests -->
                <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                </plugin>

                <!-- Checkstyle: style & lint rules -->
                <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <skip>${skipChecks}</skip>
                    <configLocation>google_checks.xml</configLocation>
                    <failsOnError>false</failsOnError>
                    <consoleOutput>true</consoleOutput>
                </configuration>
                <executions>
                    <execution>
                    <id>checkstyle</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>check</goal>
                    </goals>
                    </execution>
                </executions>
                </plugin>

                <!-- SpotBugs -->
                <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.9.4.0</version>
                <configuration>
                    <skip>${skipChecks}</skip>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                    <id>spotbugs</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>check</goal>
                    </goals>
                    </execution>
                </executions>
                </plugin>

                <!-- OWASP Dependency-Check -->
                <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>12.1.3</version>
                <configuration>
                    <skip>${skipChecks}</skip>
                    <!-- later need to set score -->
                    <failBuildOnCVSS>11</failBuildOnCVSS>
                    <nvdApiKey>${env.NVD_API_TOKEN}</nvdApiKey>
                    <dataDirectory>${env.NVD_DATA_DIR}</dataDirectory>
                    <ossIndexServerId>ossindex</ossIndexServerId>
                </configuration>
                <executions>
                    <execution>
                    <id>dependency-check</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>check</goal>
                    </goals>
                    </execution>
                </executions>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <failOnError>false</failOnError>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <arg>${skipChecks?:"-Xplugin:ErrorProne"}</arg>
                        </compilerArgs>
                        <release>${java.version}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <!-- Errorprone -->
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>${error-prone.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>training-persistence</module>
        <module>training-service</module>
        <module>training-rest</module>
        <module>training-opensearch</module>
        <module>training-api</module>
    </modules>
</project>

